--- a/src/comp/nav.css
+++ b/src/comp/nav.css
@@ -28,3 +28,32 @@
   max-width: 100%;
   justify-content: space-between;
 }
+.header .mid_header .search_box input {
+  padding: 10px 10px;
+  outline: none;
+  background: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  width: 250px;
+  border: none;
+  border: 1px solid #f6f7f8;
+}
+.header .mid_header .search_box button{
+  padding: 10px 10px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border: none;
+  outline: none;
+  border: 1px solid #ed1e76;
+  width: 50px;
+  background: #ed1e76;
+  color: #fff;
+  cursor: pointer;
+  margin-right: 30px;
+  transition: 0.5s;
+}
+.header .mid_header .search_box button:hover{
+  background: #fed700;
+  border: 1px solid #fed700;
+  color: #ed1e76;
+}
