--- a/src/comp/nav.css
+++ b/src/comp/nav.css
@@ -57,3 +57,17 @@
   border: 1px solid #fed700;
   color: #ed1e76;
 }
+.header .mid_header .user{
+  display: flex;
+  margin-right: 30px;
+}
+.header .mid_header .user .icon{
+  margin-right: 10px;
+}
+.header .mid_header .user .btn button{
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: none;
+  cursor: pointer;
+}
