--- a/src/comp/home.css
+++ b/src/comp/home.css
@@ -63,4 +63,28 @@
 .home .trending .container .left_box .header{
   display: flex;
   width: 100%;
+  padding: 10px 10px;
+  background: #f6f7f8;
+  justify-content: space-between;
+}
+.home .trending .container .left_box .header .heading h2{
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #232323;
+  margin-top: 5px;
+}
+.home .trending .container .left_box .header .cate{
+  display: flex;
+  margin-top: 5px;
+}
+.home .trending .container .left_box .header .cate h3{
+  text-transform: capitalize;
+  margin-right: 10px;
+  color: #232323;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.home .trending .container .left_box .header .cate h3:hover{
+  color: #cd1e76;
 }
