--- a/src/comp/home.css
+++ b/src/comp/home.css
@@ -72,6 +72,7 @@
   font-size: 16px;
   color: #232323;
   margin-top: 5px;
+  cursor: pointer;
 }
 .home .trending .container .left_box .header .cate{
   display: flex;
@@ -167,6 +168,7 @@
   text-transform: capitalize;
   border-radius: 5px;
   transition: 0.5s;
+  cursor: pointer;
 }
 .home .trending .container .left_box .products .container .box .info .btn:hover{
   background: #cd1e76;
