--- a/src/comp/home.css
+++ b/src/comp/home.css
@@ -1,13 +1,15 @@
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box;
 }
-.home{
+
+.home {
   width: 100%;
 }
-.home .top_banner{
+
+.home .top_banner {
   max-width: 100%;
   height: 600px;
   background: url('http://localhost:3000/image/slide-1.webp');
@@ -15,31 +17,36 @@
   background-repeat: no-repeat;
   padding: 50px 60px;
 }
-.home .top_banner .contant{
+
+.home .top_banner .contant {
   width: 100%;
   position: relative;
   top: 20%;
   padding: 10px 180px;
 }
-.home .top_banner .contant h3{
+
+.home .top_banner .contant h3 {
   text-transform: capitalize;
   color: #cd1e76;
   font-weight: 300;
   letter-spacing: 1px;
 }
-.home .top_banner .contant h2{
+
+.home .top_banner .contant h2 {
   text-transform: uppercase;
   color: #232323;
   letter-spacing: 1px;
   font-size: 42px;
   margin-top: 10px;
 }
-.home .top_banner .contant p{
+
+.home .top_banner .contant p {
   color: #232323;
   letter-spacing: 1px;
   margin-top: 10px;
   margin-bottom: 30px;
 }
+
 .home .top_banner .contant .link {
   padding: 10px 30px;
   background: #fed700;
@@ -48,37 +55,44 @@
   border-radius: 5px;
   transition: 0.5s;
 }
-.home .top_banner .contant .link:hover{
+
+.home .top_banner .contant .link:hover {
   color: #fed700;
   background: #cd1e76;
 }
-.home .trending .container{
+
+.home .trending .container {
   max-width: 100%;
   display: flex;
 }
-.home .trending .container .left_box{
+
+.home .trending .container .left_box {
   padding: 10px 20px;
   width: 75%;
 }
-.home .trending .container .left_box .header{
+
+.home .trending .container .left_box .header {
   display: flex;
   width: 100%;
   padding: 10px 10px;
   background: #f6f7f8;
   justify-content: space-between;
 }
-.home .trending .container .left_box .header .heading h2{
+
+.home .trending .container .left_box .header .heading h2 {
   text-transform: uppercase;
   font-size: 16px;
   color: #232323;
   margin-top: 5px;
   cursor: pointer;
 }
-.home .trending .container .left_box .header .cate{
+
+.home .trending .container .left_box .header .cate {
   display: flex;
   margin-top: 5px;
 }
-.home .trending .container .left_box .header .cate h3{
+
+.home .trending .container .left_box .header .cate h3 {
   text-transform: capitalize;
   margin-right: 10px;
   color: #232323;
@@ -86,18 +100,22 @@
   cursor: pointer;
   transition: 0.5s;
 }
-.home .trending .container .left_box .header .cate h3:hover{
+
+.home .trending .container .left_box .header .cate h3:hover {
   color: #cd1e76;
 }
-.home .trending .container .left_box .products{
+
+.home .trending .container .left_box .products {
   max-width: 100%;
 }
-.home .trending .container .left_box .products .container{
+
+.home .trending .container .left_box .products .container {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
-.home .trending .container .left_box .products .container .box{
+
+.home .trending .container .left_box .products .container .box {
   width: 195px;
   height: 295px;
   /* padding: 10px 10px; */
@@ -107,25 +125,30 @@
   overflow: hidden;
   border-radius: 5px;
 }
-.home .trending .container .left_box .products .container .box .img_box{
+
+.home .trending .container .left_box .products .container .box .img_box {
   display: flex;
 }
-.home .trending .container .left_box .products .container .box .img_box img{
+
+.home .trending .container .left_box .products .container .box .img_box img {
   width: 190px;
   height: 190px;
   object-fit: cover;
 }
-.home .trending .container .left_box .products .container .box .img_box .icon{
+
+.home .trending .container .left_box .products .container .box .img_box .icon {
   display: flex;
   flex-direction: column;
-  margin-left: 0%;
+  margin-left: 2%;
   margin-top: 10px;
   transition: 0.5s;
 }
-.home .trending .container .left_box .products .container .box:hover .img_box .icon{
+
+.home .trending .container .left_box .products .container .box:hover .img_box .icon {
   margin-left: -32%;
 }
-.home .trending .container .left_box .products .container .box .img_box .icon .icon_box{
+
+.home .trending .container .left_box .products .container .box .img_box .icon .icon_box {
   padding: 10px 10px;
   margin-top: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -134,28 +157,33 @@
   color: #cd1e76;
   transition: 0.5s;
 }
-.home .trending .container .left_box .products .container .box .img_box .icon .icon_box:hover{
+
+.home .trending .container .left_box .products .container .box .img_box .icon .icon_box:hover {
   color: #fff;
   background: #cd1e76;
 }
-.home .trending .container .left_box .products .container .box .info{
+
+.home .trending .container .left_box .products .container .box .info {
   padding: 10px 10px;
   margin-left: 15px;
 }
-.home .trending .container .left_box .products .container .box .info h3{
+
+.home .trending .container .left_box .products .container .box .info h3 {
   text-transform: uppercase;
   font-size: 14px;
   color: #232323;
   font-weight: 300;
   letter-spacing: 1px;
 }
-.home .trending .container .left_box .products .container .box .info p{
+
+.home .trending .container .left_box .products .container .box .info p {
   color: #cd1e76;
   margin-top: 5px;
   font-size: 14px;
   letter-spacing: 1px;
 }
-.home .trending .container .left_box .products .container .box .info .btn{
+
+.home .trending .container .left_box .products .container .box .info .btn {
   margin-top: 10px;
   align-items: center;
   padding: 10px 20px;
@@ -170,7 +198,71 @@
   transition: 0.5s;
   cursor: pointer;
 }
-.home .trending .container .left_box .products .container .box .info .btn:hover{
+
+.home .trending .container .left_box .products .container .box .info .btn:hover {
   background: #cd1e76;
   color: #f6f7f8;
+}
+
+.home .trending .container .right_box {
+  padding: 10px 20px;
+  width: 24%;
+  display: flex;
+  flex-direction: column;
+}
+
+.home .trending .container .right_box .right_container {
+  max-width: 100%;
+}
+
+.home .trending .container .right_box .right_container .testimonial {
+  width: 100%;
+  border: 4px solid #f6f7f8;
+}
+
+.home .trending .container .right_box .right_container .testimonial .head {
+  padding: 10px 10px;
+  width: 100%;
+  background: #f6f7f8;
+}
+
+.home .trending .container .right_box .right_container .testimonial .head h3 {
+  text-align: center;
+  color: #232323;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  letter-spacing: 1px;
+}
+.home .trending .container .right_box .right_container .testimonial .detail{
+  padding: 10px 20px;
+}
+.home .trending .container .right_box .right_container .testimonial .detail .img_box img{
+  margin-top: 40px;
+  margin-left: 50px;
+}
+.home .trending .container .right_box .right_container .testimonial .detail .info {
+  margin-top: 10px;
+}
+.home .trending .container .right_box .right_container .testimonial .detail .info h3{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #232323;
+}
+.home .trending .container .right_box .right_container .testimonial .detail .info h4{
+  text-align: center;
+  font-size: 12px;
+  margin-top: 10px;
+  color: #cd1e76;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.home .trending .container .right_box .right_container .testimonial .detail .info p{
+  margin-top: 10px;
+  text-align: center;
+  font-weight: 600;
+  color: #232323;
+  font-size: 14px;
+  margin-bottom: 20px;
 }
