--- a/src/comp/home.css
+++ b/src/comp/home.css
@@ -266,3 +266,36 @@
   font-size: 14px;
   margin-bottom: 20px;
 }
+.home .trending .container .right_box .right_container .newsletter{
+  width: 100%;
+  background: #f6f7f8;
+  margin-top: 20px;
+  padding: 10px 10px;
+}
+.home .trending .container .right_box .right_container .newsletter .head{
+  margin-top: 10px;
+  width: 100%;
+}
+.home .trending .container .right_box .right_container .newsletter .head h3{
+  text-align: center;
+  color: #232323;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+.home .trending .container .right_box .right_container .newsletter .form{
+  margin-top: 10px;
+  width: 100%;
+}
+.home .trending .container .right_box .right_container .newsletter .form p{
+  text-align: center;
+  text-transform: capitalize;
+  color: #8a8a8a;
+}
+.home .trending .container .right_box .right_container .newsletter .form input{
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px 10px;
+  background: none;
+  outline: none;
+}
