--- a/src/comp/home.css
+++ b/src/comp/home.css
@@ -356,3 +356,22 @@
 .home .banners .container .left_box{
   width: 24%;
 }
+.home .banner .container .left_box .box{
+  margin-top: 10px;
+}
+.home .banners .container .right_box{
+  width: 75%;
+}
+.home .banners .container .right_box .top{
+  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.home .banners .container .right_box .bottom{
+  max-width: 100%;
+  margin-top: 10px;
+}
+.home .banners .container .right_box .bottom img{
+  width: 100%;
+  object-fit: cover;
+}
