--- a/src/comp/home.css
+++ b/src/comp/home.css
@@ -375,3 +375,19 @@
   width: 100%;
   object-fit: cover;
 }
+.home .product_type{
+  padding: 20px 30px;
+  width: 100%;
+}
+.home .product_type .container{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.home .product_type .container .box{
+  width: 400px;
+  height: 490px;
+  border: 3px solid #f6f7f8;
+  padding: 10px 10px;
+  overflow: hidden;
+}
