--- a/src/comp/footer.css
+++ b/src/comp/footer.css
@@ -72,7 +72,7 @@
 .footer .container .right_box .bottom .box h3{
   text-transform: uppercase;
   color: #232323;
-  font-size: 14px;
+  font-size: 16px;
   letter-spacing: 1px;
 }
 .footer .container .right_box .bottom .box ul{
@@ -84,8 +84,11 @@
   color: #8a8a8a;
   text-transform: capitalize;
   letter-spacing: 1px;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 600;
   cursor: pointer;
   transition: 0.5s;
+}
+.footer .container .right_box .bottom .box ul li:hover{
+  color: #cd1e76;
 }
