--- a/src/comp/shop.css
+++ b/src/comp/shop.css
@@ -85,3 +85,38 @@
   width: 100%;
   object-fit: cover;
 }
+.shop .container .right_box .product_box{
+  max-width: 100%;
+  padding: 10px 10px;
+}
+.shop .container .right_box .product_box h2{
+  color: #232323;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 22px;
+  margin-top: 10px;
+}
+.shop .container .right_box .product_box .product_container{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space;
+}
+.shop .container .right_box .product_box .product_container .box{
+  padding: 10px 10px;
+  width: 270px;
+  height: 370px;
+  overflow: hidden;
+  border: 3px solid #f6f6f6;
+  margin-left: 15px;
+  margin-top: 20px;
+}
+.shop .container .right_box .product_box .product_container .box .img_box{
+  display: flex;
+}
+.shop .container .right_box .product_box .product_container .box .img_box img{
+  width: 170px;
+  height: 170px;
+  margin-left: 40px;
+}
+/* .shop .container .right_box .product_box .product_container .box .img_box */
