--- a/src/comp/shop.css
+++ b/src/comp/shop.css
@@ -105,7 +105,7 @@
 .shop .container .right_box .product_box .product_container .box{
   padding: 10px 10px;
   width: 270px;
-  height: 370px;
+  height: 400px;
   overflow: hidden;
   border: 3px solid #f6f6f6;
   margin-left: 15px;
@@ -115,8 +115,60 @@
   display: flex;
 }
 .shop .container .right_box .product_box .product_container .box .img_box img{
-  width: 170px;
-  height: 170px;
-  margin-left: 40px;
+  width: 100%;
+  height: 270px;
 }
-/* .shop .container .right_box .product_box .product_container .box .img_box */
+.shop .container .right_box .product_box .product_container .box .img_box .icon{
+  display: flex;
+  flex-direction: column;
+  padding: 10px 10px;
+  margin-top: 10px;
+  margin-left: 40px;
+  transition: 0.5s;
+}
+.shop .container .right_box .product_box .product_container .box .img_box .icon li{
+  list-style: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 10px 10px;
+  margin-top: 10px;
+  color: #8a8a8a;
+  background: #fff;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.shop .container .right_box .product_box .product_container .box .img_box .icon li{
+  color: #fff;
+  background: #cd1e76;
+}
+.shop .container .right_box .product_box .product_container .box:hover .img_box .icon{
+  margin-left: -20px;
+}
+.shop .container .right_box .product_box .product_container .box .detail{
+  margin-top: 10px;
+  width: 100%;
+}
+.shop .container .right_box .product_box .product_container .box .detail h3{
+  text-align: center;
+  color: #232323;
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+.shop .container .right_box .product_box .product_container .box .detail p{
+  margin-top: 5px;
+  text-align: center;
+  color: #cd1e76;
+  font-size: 16px;
+}
+.shop .container .right_box .product_box .product_container .box .detail button{
+  margin-top: 10px;
+  margin-left: 30%;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  color: #232323;
+  background: #fed700;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.5s;
+}
