added Shop links

--- a/src/comp/shop.css
+++ b/src/comp/shop.css
@@ -141,7 +141,7 @@
   background: #cd1e76;
 }
 .shop .container .right_box .product_box .product_container .box:hover .img_box .icon{
-  margin-left: -20px;
+  margin-left: -47px;
 }
 .shop .container .right_box .product_box .product_container .box .detail{
   margin-top: 10px;
@@ -171,4 +171,8 @@
   font-weight: 600;
   cursor: pointer;
   transition: 0.5s;
+}
+.shop .container .right_box .product_box .product_container .box .detail button:hover{
+  color: #fed700;
+  background: #232323;
 }
